# qrcode_utils

./: README.md  pyproject.toml
qrcode_utils/: qrcode_main.py
