[tool.poetry]
name = "qrcode-utils"
version = "0.1.0"
description = ""
authors = ["scaperoth@berkeley.edu <scaperoth@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
qrcode = "^8.2"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
